--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,9 @@
 {
+  "cleanUrls": true,
+  "trailingSlash": false,
   "rewrites": [
     {
-      "source": "/(.*)",
+      "source": "/((?!assets/|sw.js|favicon.png|manifest.json|.*\\..*).*)",
       "destination": "/index.html"
     }
   ],
@@ -23,7 +25,7 @@
         },
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self'; script-src 'self' https://apis.google.com https://accounts.google.com https://cdn.tailwindcss.com 'unsafe-inline'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://fonts.gstatic.com; font-src 'self' data: https://fonts.gstatic.com; img-src 'self' data: blob:; connect-src 'self' https://www.googleapis.com https://identitytoolkit.googleapis.com; frame-src https://accounts.google.com;"
+          "value": "default-src 'self'; script-src 'self' https://apis.google.com https://accounts.google.com https://cdn.tailwindcss.com 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://fonts.gstatic.com; font-src 'self' data: https://fonts.gstatic.com; img-src 'self' data: blob: https:; connect-src 'self' https://www.googleapis.com https://identitytoolkit.googleapis.com https://*.googleapis.com; frame-src https://accounts.google.com;"
         }
       ]
     }
